seaqt/QtCore/gen_qrect.h

class QMargins;
class QPoint;
class QRect;
class QRectF;
class QSize;
typedef struct QMargins QMargins;
typedef struct QMarginsF QMarginsF;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QSize QSize;
typedef struct QSizeF QSizeF;
QRectF* QRectF_new();
QRectF* QRectF_new_topleft_size(QPointF* topleft, QSizeF* size);
QRectF* QRectF_new_topleft_bottomRight(QPointF* topleft, QPointF* bottomRight);
QRectF* QRectF_new_left_top_width_height(double left, double top, double width, double height);
QRectF* QRectF_new_rect(QRect* rect);
QRectF* QRectF_new_from(QRectF* from);
void QRectF_operatorBitwiseOrAssign(QRectF* self, QRectF* r);
void QRectF_operatorBitwiseAndAssign(QRectF* self, QRectF* r);
bool QRectF_contains_r(const QRectF* self, QRectF* r);
bool QRectF_contains_p(const QRectF* self, QPointF* p);
bool QRectF_contains_x_y(const QRectF* self, double x, double y);
QRectF* QRectF_united(const QRectF* self, QRectF* other);
QRectF* QRectF_intersected(const QRectF* self, QRectF* other);
bool QRectF_intersects(const QRectF* self, QRectF* r);
QRectF* QRectF_marginsAdded(const QRectF* self, QMarginsF* margins);
QRectF* QRectF_marginsRemoved(const QRectF* self, QMarginsF* margins);
QRectF* QRectF_operatorPlusAssign(QRectF* self, QMarginsF* margins);
QRectF* QRectF_operatorMinusAssign(QRectF* self, QMarginsF* margins);
QRect* QRectF_toRect(const QRectF* self);
QRect* QRectF_toAlignedRect(const QRectF* self);
void QRectF_operatorAssign(QRectF* self, QRectF* from);