seaqt/QtCore/gen_qrect.nim

proc fcQRectF_operatorBitwiseOrAssign(self: pointer, r: pointer): void {.importc: "QRectF_operatorBitwiseOrAssign".}
proc fcQRectF_operatorBitwiseAndAssign(self: pointer, r: pointer): void {.importc: "QRectF_operatorBitwiseAndAssign".}
proc fcQRectF_containsR(self: pointer, r: pointer): bool {.importc: "QRectF_contains_r".}
proc fcQRectF_containsP(self: pointer, p: pointer): bool {.importc: "QRectF_contains_p".}
proc fcQRectF_containsXY(self: pointer, x: float64, y: float64): bool {.importc: "QRectF_contains_x_y".}
proc fcQRectF_united(self: pointer, other: pointer): pointer {.importc: "QRectF_united".}
proc fcQRectF_intersected(self: pointer, other: pointer): pointer {.importc: "QRectF_intersected".}
proc fcQRectF_intersects(self: pointer, r: pointer): bool {.importc: "QRectF_intersects".}
proc fcQRectF_marginsAdded(self: pointer, margins: pointer): pointer {.importc: "QRectF_marginsAdded".}
proc fcQRectF_marginsRemoved(self: pointer, margins: pointer): pointer {.importc: "QRectF_marginsRemoved".}
proc fcQRectF_operatorPlusAssign(self: pointer, margins: pointer): pointer {.importc: "QRectF_operatorPlusAssign".}
proc fcQRectF_operatorMinusAssign(self: pointer, margins: pointer): pointer {.importc: "QRectF_operatorMinusAssign".}
proc fcQRectF_toRect(self: pointer): pointer {.importc: "QRectF_toRect".}
proc fcQRectF_toAlignedRect(self: pointer): pointer {.importc: "QRectF_toAlignedRect".}
proc fcQRectF_operatorAssign(self: pointer, fromVal: pointer): void {.importc: "QRectF_operatorAssign".}
proc fcQRectF_new(): ptr cQRectF {.importc: "QRectF_new".}
proc fcQRectF_new2(topleft: pointer, size: pointer): ptr cQRectF {.importc: "QRectF_new_topleft_size".}
proc fcQRectF_new3(topleft: pointer, bottomRight: pointer): ptr cQRectF {.importc: "QRectF_new_topleft_bottomRight".}
proc fcQRectF_new4(left: float64, top: float64, width: float64, height: float64): ptr cQRectF {.importc: "QRectF_new_left_top_width_height".}
proc fcQRectF_new5(rect: pointer): ptr cQRectF {.importc: "QRectF_new_rect".}
proc fcQRectF_new6(fromVal: pointer): ptr cQRectF {.importc: "QRectF_new_from".}

proc isNull*(self: gen_qrect_types.QRect): bool =
  fcQRect_isNull(self.h)

proc isEmpty*(self: gen_qrect_types.QRect): bool =
  fcQRect_isEmpty(self.h)

proc isValid*(self: gen_qrect_types.QRect): bool =
  fcQRect_isValid(self.h)

proc left*(self: gen_qrect_types.QRect): cint =
  fcQRect_left(self.h)

proc top*(self: gen_qrect_types.QRect): cint =
  fcQRect_top(self.h)

proc right*(self: gen_qrect_types.QRect): cint =
  fcQRect_right(self.h)

proc bottom*(self: gen_qrect_types.QRect): cint =
  fcQRect_bottom(self.h)

proc normalized*(self: gen_qrect_types.QRect): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_normalized(self.h), owned: true)

proc x*(self: gen_qrect_types.QRect): cint =
  fcQRect_x(self.h)

proc y*(self: gen_qrect_types.QRect): cint =
  fcQRect_y(self.h)

proc setLeft*(self: gen_qrect_types.QRect, pos: cint): void =
  fcQRect_setLeft(self.h, pos)

proc setTop*(self: gen_qrect_types.QRect, pos: cint): void =
  fcQRect_setTop(self.h, pos)

proc setRight*(self: gen_qrect_types.QRect, pos: cint): void =
  fcQRect_setRight(self.h, pos)

proc setBottom*(self: gen_qrect_types.QRect, pos: cint): void =
  fcQRect_setBottom(self.h, pos)

proc setX*(self: gen_qrect_types.QRect, x: cint): void =
  fcQRect_setX(self.h, x)

proc setY*(self: gen_qrect_types.QRect, y: cint): void =
  fcQRect_setY(self.h, y)

proc setTopLeft*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_setTopLeft(self.h, p.h)

proc setBottomRight*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_setBottomRight(self.h, p.h)

proc setTopRight*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_setTopRight(self.h, p.h)

proc setBottomLeft*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_setBottomLeft(self.h, p.h)

proc topLeft*(self: gen_qrect_types.QRect): gen_qpoint_types.QPoint =
  gen_qpoint_types.QPoint(h: fcQRect_topLeft(self.h), owned: true)

proc bottomRight*(self: gen_qrect_types.QRect): gen_qpoint_types.QPoint =
  gen_qpoint_types.QPoint(h: fcQRect_bottomRight(self.h), owned: true)

proc topRight*(self: gen_qrect_types.QRect): gen_qpoint_types.QPoint =
  gen_qpoint_types.QPoint(h: fcQRect_topRight(self.h), owned: true)

proc bottomLeft*(self: gen_qrect_types.QRect): gen_qpoint_types.QPoint =
  gen_qpoint_types.QPoint(h: fcQRect_bottomLeft(self.h), owned: true)

proc center*(self: gen_qrect_types.QRect): gen_qpoint_types.QPoint =
  gen_qpoint_types.QPoint(h: fcQRect_center(self.h), owned: true)

proc moveLeft*(self: gen_qrect_types.QRect, pos: cint): void =
  fcQRect_moveLeft(self.h, pos)

proc moveTop*(self: gen_qrect_types.QRect, pos: cint): void =
  fcQRect_moveTop(self.h, pos)

proc moveRight*(self: gen_qrect_types.QRect, pos: cint): void =
  fcQRect_moveRight(self.h, pos)

proc moveBottom*(self: gen_qrect_types.QRect, pos: cint): void =
  fcQRect_moveBottom(self.h, pos)

proc moveTopLeft*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_moveTopLeft(self.h, p.h)

proc moveBottomRight*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_moveBottomRight(self.h, p.h)

proc moveTopRight*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_moveTopRight(self.h, p.h)

proc moveBottomLeft*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_moveBottomLeft(self.h, p.h)

proc moveCenter*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_moveCenter(self.h, p.h)

proc translate*(self: gen_qrect_types.QRect, dx: cint, dy: cint): void =
  fcQRect_translateDxDy(self.h, dx, dy)

proc translate*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_translateP(self.h, p.h)

proc translated*(self: gen_qrect_types.QRect, dx: cint, dy: cint): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_translatedDxDy(self.h, dx, dy), owned: true)

proc translated*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_translatedP(self.h, p.h), owned: true)

proc transposed*(self: gen_qrect_types.QRect): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_transposed(self.h), owned: true)

proc moveTo*(self: gen_qrect_types.QRect, x: cint, t: cint): void =
  fcQRect_moveToXT(self.h, x, t)

proc moveTo*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): void =
  fcQRect_moveToP(self.h, p.h)

proc setRect*(self: gen_qrect_types.QRect, x: cint, y: cint, w: cint, h: cint): void =
  fcQRect_setRect(self.h, x, y, w, h)

proc getRect*(self: gen_qrect_types.QRect, x: ptr cint, y: ptr cint, w: ptr cint, h: ptr cint): void =
  fcQRect_getRect(self.h, x, y, w, h)

proc setCoords*(self: gen_qrect_types.QRect, x1: cint, y1: cint, x2: cint, y2: cint): void =
  fcQRect_setCoords(self.h, x1, y1, x2, y2)

proc getCoords*(self: gen_qrect_types.QRect, x1: ptr cint, y1: ptr cint, x2: ptr cint, y2: ptr cint): void =
  fcQRect_getCoords(self.h, x1, y1, x2, y2)

proc adjust*(self: gen_qrect_types.QRect, x1: cint, y1: cint, x2: cint, y2: cint): void =
  fcQRect_adjust(self.h, x1, y1, x2, y2)

proc adjusted*(self: gen_qrect_types.QRect, x1: cint, y1: cint, x2: cint, y2: cint): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_adjusted(self.h, x1, y1, x2, y2), owned: true)

proc size*(self: gen_qrect_types.QRect): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQRect_size(self.h), owned: true)

proc width*(self: gen_qrect_types.QRect): cint =
  fcQRect_width(self.h)

proc height*(self: gen_qrect_types.QRect): cint =
  fcQRect_height(self.h)

proc setWidth*(self: gen_qrect_types.QRect, w: cint): void =
  fcQRect_setWidth(self.h, w)

proc setHeight*(self: gen_qrect_types.QRect, h: cint): void =
  fcQRect_setHeight(self.h, h)

proc setSize*(self: gen_qrect_types.QRect, s: gen_qsize_types.QSize): void =
  fcQRect_setSize(self.h, s.h)

proc operatorBitwiseOr*(self: gen_qrect_types.QRect, r: gen_qrect_types.QRect): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_operatorBitwiseOr(self.h, r.h), owned: true)

proc operatorBitwiseAnd*(self: gen_qrect_types.QRect, r: gen_qrect_types.QRect): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_operatorBitwiseAnd(self.h, r.h), owned: true)

proc operatorBitwiseOrAssign*(self: gen_qrect_types.QRect, r: gen_qrect_types.QRect): void =
  fcQRect_operatorBitwiseOrAssign(self.h, r.h)

proc operatorBitwiseAndAssign*(self: gen_qrect_types.QRect, r: gen_qrect_types.QRect): void =
  fcQRect_operatorBitwiseAndAssign(self.h, r.h)

proc contains*(self: gen_qrect_types.QRect, r: gen_qrect_types.QRect): bool =
  fcQRect_containsR(self.h, r.h)

proc contains*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint): bool =
  fcQRect_containsP(self.h, p.h)

proc contains*(self: gen_qrect_types.QRect, x: cint, y: cint): bool =
  fcQRect_containsXY(self.h, x, y)

proc contains*(self: gen_qrect_types.QRect, x: cint, y: cint, proper: bool): bool =
  fcQRect_containsXYProper(self.h, x, y, proper)

proc united*(self: gen_qrect_types.QRect, other: gen_qrect_types.QRect): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_united(self.h, other.h), owned: true)

proc intersected*(self: gen_qrect_types.QRect, other: gen_qrect_types.QRect): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_intersected(self.h, other.h), owned: true)

proc intersects*(self: gen_qrect_types.QRect, r: gen_qrect_types.QRect): bool =
  fcQRect_intersects(self.h, r.h)

proc marginsAdded*(self: gen_qrect_types.QRect, margins: gen_qmargins_types.QMargins): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_marginsAdded(self.h, margins.h), owned: true)

proc marginsRemoved*(self: gen_qrect_types.QRect, margins: gen_qmargins_types.QMargins): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_marginsRemoved(self.h, margins.h), owned: true)

proc operatorPlusAssign*(self: gen_qrect_types.QRect, margins: gen_qmargins_types.QMargins): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_operatorPlusAssign(self.h, margins.h), owned: false)

proc operatorMinusAssign*(self: gen_qrect_types.QRect, margins: gen_qmargins_types.QMargins): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQRect_operatorMinusAssign(self.h, margins.h), owned: false)

proc operatorAssign*(self: gen_qrect_types.QRect, fromVal: gen_qrect_types.QRect): void =
  fcQRect_operatorAssign(self.h, fromVal.h)

proc contains*(self: gen_qrect_types.QRect, r: gen_qrect_types.QRect, proper: bool): bool =
  fcQRect_containsRProper(self.h, r.h, proper)

proc contains*(self: gen_qrect_types.QRect, p: gen_qpoint_types.QPoint, proper: bool): bool =
  fcQRect_containsPProper(self.h, p.h, proper)

proc create*(T: type gen_qrect_types.QRect): gen_qrect_types.QRect =
  let tmp = gen_qrect_types.QRect(h: fcQRect_new(), owned: true)
  tmp
proc create*(T: type gen_qrect_types.QRect,
    topleft: gen_qpoint_types.QPoint, bottomright: gen_qpoint_types.QPoint): gen_qrect_types.QRect =
  let tmp = gen_qrect_types.QRect(h: fcQRect_new2(topleft.h, bottomright.h), owned: true)
  tmp
proc create*(T: type gen_qrect_types.QRect,
    topleft: gen_qpoint_types.QPoint, size: gen_qsize_types.QSize): gen_qrect_types.QRect =
  let tmp = gen_qrect_types.QRect(h: fcQRect_new3(topleft.h, size.h), owned: true)
  tmp
proc create*(T: type gen_qrect_types.QRect,
    left: cint, top: cint, width: cint, height: cint): gen_qrect_types.QRect =
  let tmp = gen_qrect_types.QRect(h: fcQRect_new4(left, top, width, height), owned: true)
  tmp
proc create*(T: type gen_qrect_types.QRect,
    fromVal: gen_qrect_types.QRect): gen_qrect_types.QRect =
  let tmp = gen_qrect_types.QRect(h: fcQRect_new5(fromVal.h), owned: true)
  tmp
proc isNull*(self: gen_qrect_types.QRectF): bool =
  fcQRectF_isNull(self.h)

proc isEmpty*(self: gen_qrect_types.QRectF): bool =
  fcQRectF_isEmpty(self.h)
